[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "A command line data manipulation tool inspired by the dplyr grammar."
repository = "https://github.com/vincev/dply-rs"
edition = "2021"
license = "Apache-2.0"
name = "dply"
version = "0.3.0"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
comfy-table = "7"
home = "0.5"
lru = "0.12.0"
nom = "7"
reedline = "0.30"
regex = "1.9.4"
thiserror = "1.0"

[dependencies.polars]
version = "0.38.0"
default-features = false
features = [
    "cross_join",
    "csv",
    "dtype-full",
    "fmt",
    "is_in",
    "json",
    "lazy",
    "parquet",
    "semi_anti_join",
    "strings",
    "timezones"
]

[dev-dependencies]
indoc = "2"

[profile.dev]
opt-level = 0
debug = 2