[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "A command line data manipulation tool inspired by the dplyr grammar."
repository = "https://github.com/vincev/dply-rs"
edition = "2021"
license = "Apache-2.0"
name = "dply"
version = "0.3.2"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
comfy-table = "7"
home = "0.5"
lru = "0.12.0"
nom = "7"
reedline = "0.32"
regex = "1.9.4"
thiserror = "1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "*"

[dependencies.polars]
version = "0.40.0"
default-features = false
features = [
    "cross_join",
    "csv",
    "dtype-full",
    "fmt",
    "is_in",
    "json",
    "lazy",
    "parquet",
    "performant",
    "semi_anti_join",
    "strings",
    "timezones"
]

[dev-dependencies]
indoc = "2"

[profile.dev]
opt-level = 0
debug = 2